# Zapier-Triggers-API

./: .env.example  .gitignore  EPIC_1_COMPLETION_SUMMARY.md  README.md  docker-compose.yml  orchestrator.md
docs/: DYNAMODB_MONITORING_RUNBOOK.md  DYNAMODB_SCHEMA.md  STORY_1.4_IMPLEMENTATION_SUMMARY.md  architecture.md  brief.md  getting-started.md  openapi.yaml  orchestration-flow.md  prd.md  project-overview.md
infrastructure/: DEPLOYMENT_VERIFICATION.md
load_tests/: locustfile.py
scripts/: init-localstack.sh  setup-dev.sh
services/api/: pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
services/api/src/: __init__.py
services/api/src/handlers/: __init__.py  auth.py  events.py  health.py  inbox.py  keys.py
services/api/src/middleware/: security_headers.py
services/api/src/models/: __init__.py  api_key.py  event.py  inbox.py
services/api/src/monitoring/: __init__.py  logging_config.py  metrics.py  tracing.py
services/api/src/repositories/: __init__.py  api_key_repository.py  event_repository.py
services/api/src/services/: __init__.py  event_lifecycle_service.py  event_service.py  inbox_service.py  retry_service.py
services/api/src/utils/: __init__.py  pagination.py  rate_limiter.py  response.py
services/api/tests/: conftest.py  pytest_plugin.py
services/api/tests/integration/: test_dynamodb_storage.py  test_event_ingestion.py  test_inbox_retrieval.py
services/api/tests/performance/: __init__.py  test_dynamodb_latency.py
services/api/tests/unit/handlers/: __init__.py  test_auth.py  test_events.py  test_health.py  test_inbox.py  test_keys.py
services/api/tests/unit/models/: test_api_key.py  test_event.py
services/api/tests/unit/repositories/: test_api_key_repository.py  test_event_repository.py
services/api/tests/unit/services/: test_event_service.py  test_inbox_service.py
services/api/tests/unit/utils/: __init__.py  test_pagination.py  test_rate_limiter.py  test_response.py
stories/: 1.10-load-testing.md  1.11-security.md  (+8 more)
(+59 files in other folders)
