[tool.poetry]
name = "zapier-triggers-api"
version = "1.0.0"
description = "Zapier Triggers API - Serverless event ingestion service"
authors = ["Zapier Engineering <engineering@zapier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
botocore = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
moto = "^4.2.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
boto3-stubs = {extras = ["dynamodb", "sqs", "secretsmanager", "ssm"], version = "^1.34.0"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
