[tool.poetry]
name = "zapier-triggers-api"
version = "1.0.0"
description = "Zapier Triggers API - Serverless event ingestion service"
authors = ["Zapier Engineering <engineering@zapier.com>"]
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.0"
botocore = "^1.34.0"
fastapi = "^0.109.0"
mangum = "^0.17.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aws-lambda-powertools = "^2.31.0"
aws-xray-sdk = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.0"
moto = "^5.0.0"
httpx = "^0.26.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
boto3-stubs = {extras = ["dynamodb", "sqs", "secretsmanager", "ssm"], version = "^1.34.0"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
